# AERSP424_AirfoilAnalysis

./: CMakeLists.txt  CMakeSettings.json  README.md
aerolib/include/: Airfoil.h  AirfoilElement.h  AirfoilGeometry.h  AirfoilModel.h  AirfoilParameter.h  AirfoilShape.h  AnalyticalAirfoil.h  BoolParameter.h  Circle.h  DoubleParameter.h  DoublePoint.h  NACA4.h  RationalSpline.h  Spline.h  TabulatedAirfoil.h  Util.h  XMLBlock.h
aerolib/src/: Airfoil.cpp  AirfoilElement.cpp  AirfoilGeometry.cpp  AirfoilModel.cpp  AirfoilShape.cpp  BoolParameter.cpp  Circle.cpp  DoubleParameter.cpp  DoublePoint.cpp  NACA4.cpp  RationalSpline.cpp  Util.cpp
airfoilgui/: FrameGUI.cpp  FrameGUI.h  WxFormAirfoilGUI.fbp
include/: AirfoilApp.h  AirfoilFrame.h  Canvas.h  Fluid.h  Region.h  Settings.h
src/: AirfoilApp.cpp  AirfoilFrame.cpp  Canvas.cpp  Fluid.cpp  Region.cpp  Settings.cpp
